Comprehensive update
